--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.15.2",
     "morgan": "^1.10.0",
-    "nodemon": "^3.1.10"
+    "nodemailer": "^7.0.5",
+    "nodemon": "^3.1.10",
+    "uuid": "^11.1.0"
   }
 }
