--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^5.1.0",
     "express-rate-limit": "^7.5.1",
     "google-auth-library": "^10.1.0",
+    "googleapis": "^153.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.15.2",
     "morgan": "^1.10.0",
