--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "express-rate-limit": "^7.5.1",
+    "flutterwave-node-v3": "^1.3.0",
     "google-auth-library": "^10.1.0",
     "googleapis": "^153.0.0",
     "jsonwebtoken": "^9.0.2",
