--- a/package.json
+++ b/package.json
@@ -16,12 +16,12 @@
   },
   "homepage": "https://github.com/Olatunjhi/Authentication#readme",
   "dependencies": {
+    "axios": "^1.11.0",
     "bcryptjs": "^3.0.2",
     "cloudinary": "^1.41.3",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "express-rate-limit": "^7.5.1",
-    "flutterwave-node-v3": "^1.3.0",
     "google-auth-library": "^10.1.0",
     "googleapis": "^153.0.0",
     "jsonwebtoken": "^9.0.2",
